It might kinda be fixed?
only seems to break on firefox or high res monitors...quite a big problem really

--- a/assets/css/blog_post.css
+++ b/assets/css/blog_post.css
@@ -36,9 +36,6 @@ body{
 #card {
 	padding: 1%;
 	float: right;
-	text-align: center;
-	max-width: 99%;
-	color: white;
 }
 #card_container {
 	padding: 2px 16px;
